# short_links

./: .dockerignore  .gitignore  Makefile  docker-compose.db.dev.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pet project architecture.drawio  readme.md
backend/: coverage.ini  db.sqlite3  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
backend/app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/common/: tasks.py
backend/common/fixtures/: dummy_urls.json
backend/front/: admin.py  models.py  services.py  urls.py  views.py
backend/front/migrations/: 0001_initial.py  0002_urlsstorage_counter.py
backend/front/static/css/: nicepage.css  Главная.css
backend/front/static/js/: script.js
backend/front/templates/: index.html
backend/tests/: test_short_links.py
docker/: backend.Dockerfile  broker.conf  nginx.frontend.conf  nginx.proxy.conf  proxy.Dockerfile  redis.conf
env.example/: backend.env
